# Practice_BSUIR

./: README.md  down.sh  start.sh
cables/: alembic.ini  docker-compose.yaml  pyproject.toml
cables/migrations/: env.py
cables/migrations/versions/: 0adc6393d4a8_.py  5add6d582df4_.py  bf6f42b2f99e_.py  daaf2fd534c2_.py  e2f69f1d2ad9_.py  f3cced1428c3_.py
cables/src/: DAO.py  main.py  service.py  settings.py
cables/src/cables/: DAO.py  models.py  routers.py  schemas.py  service.py  utils.py
users/: Dockerfile  alembic.ini  docker-compose.yaml  pyproject.toml
users/docker-entrypoint-initdb.d/: init.sh
users/migrations/: env.py
users/migrations/versions/: 393242e783a0_.py  7998bfa0ba00_.py  a88077e6b5eb_.py  d88feb41b7e4_.py
users/src/: DAO.py  global_utils.py  main.py  service.py  session.py  settings.py
users/src/users/: DAO.py  models.py  routers.py  schemas.py  service.py  services.py  utils.py
